# ResonanceID-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  resonanceid-cli.toml.example
src/: config.rs  lib.rs  main.rs  pipeline.rs
src/db/: admin.rs  create_db.rs  recognize_song.rs  register_song.rs
src/tests/: db_integration.rs  integration.rs  mod.rs  pipeline.rs
src/utils/: audio_to_spectrogram.rs  extract_peaks.rs  mod.rs  peaks_to_hashes.rs  read_wav.rs
