[package]
name = "shazam"
version = "0.2.2"
edition = "2024"
default-run = "shazam"

[lib]
name = "shazam"
path = "src/lib.rs"

[[bin]]
name = "shazam"
path = "src/main.rs"

[[bin]]
name = "test-pipeline"
path = "src/bin/test-pipeline.rs"

[dependencies]
hound = "3.5"
rusqlite = "0.38.0"
rustfft = "6.2"
