[package]
name = "resonanceid-cli"
version = "0.8.1"
edition = "2024"
default-run = "resonanceid-cli"

[lib]
name = "resonanceid_cli"
path = "src/lib.rs"

[[bin]]
name = "resonanceid-cli"
path = "src/main.rs"

[[bin]]
name = "test-pipeline"
path = "src/bin/test-pipeline.rs"

[dependencies]
hound = "3.5"
rusqlite = "0.38.0"
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
